--- a/src/app/features/patient-details/category/list-flexible/list-flexible.component.html
+++ b/src/app/features/patient-details/category/list-flexible/list-flexible.component.html
@@ -5,8 +5,8 @@
       <!-- biomarker form -->
       <ce-biomarker-lab-result
         [biomarker]="biomarker"
-        [formGroup]="findLabBiomarkerControlById(biomarker.id)!"
-        [unitTypeEditable]="false" />
+        [unitTypeEditable]="false"
+        [formGroup]="findLabBiomarkerControlById(biomarker.id)!" />
     </span>
     <!-- Save and edit button -->
     <div class="col-start-1 col-end-6 flex flex-row-reverse">
