--- a/src/app/features/patient-details/biomarker/lab-result/lab-result.component.html
+++ b/src/app/features/patient-details/biomarker/lab-result/lab-result.component.html
@@ -25,7 +25,8 @@
       [max]="currentUnit?.maximum!"
       class="block w-full rounded-md border p-2 placeholder:text-label-2"
       [placeholder]="0"
-      formControlName="value" />
+      formControlName="value"
+      [ngClass]="isFieldInvalid('value') ? 'invalid' : 'valid'" />
     <div class="absolute inset-y-0 right-0 flex items-center">
       <ng-container *ngIf="!unitTypeEditable; else editUnits">
         <div
@@ -35,7 +36,11 @@
       </ng-container>
       <ng-template #editUnits>
         <!-- editmode: show editable units and options in -->
-        <select name="unitSelector" class="mr-1 border-0 px-2 py-1 focus:ring-0" formControlName="unitType">
+        <select
+          name="unitSelector"
+          class="mr-1 border-0 px-2 py-1 focus:ring-0"
+          formControlName="unitType"
+          (change)="setCurrentUnit()">
           <option class="pr-2" *ngFor="let unit of biomarker.units" [value]="unit.unitType">
             {{ unit.shorthand }}
           </option>
@@ -48,7 +53,7 @@
       </ng-template>
     </div>
   </div>
-  <p *ngIf="isFieldInvalid('value')" class="mt-2 text-sm text-red-600 dark:text-red-500">
+  <p class="error-message mt-2 text-sm text-red-600 dark:text-red-500">
     <span class="font-medium">
       {{ 'biomarker.validationRangeMessage' | translate: { min: currentUnit?.minimum, max: currentUnit?.maximum } }}
     </span>
