--- a/src/app/features/patient-details/biomarker/medical-history/medical-history.component.html
+++ b/src/app/features/patient-details/biomarker/medical-history/medical-history.component.html
@@ -21,7 +21,6 @@
   <div *ngIf="biomarker.type === 'options' || biomarker.type === 'boolean'" class="grid place-items-baseline">
     <ul class="flex gap-1">
       <li *ngFor="let option of biomarker.unit.options">
-        <!--        <ng-container *ngIf="!sideEffectMarker || option.sideEffectValue !== sideEffectMarker?.value">-->
         <input
           type="radio"
           [id]="biomarker.id + '_' + option.displayName"
@@ -44,8 +43,8 @@
       [max]="biomarker.unit.maximum!"
       formControlName="value"
       class="block w-full rounded-md border p-2 placeholder:text-label-2"
-      [placeholder]="0" />
-    <!--  [class]="biomarker.isValid ? 'border-tone-2 focus:ring-primary' : 'border-text-red focus:ring-text-red'"-->
+      [placeholder]="0"
+      [ngClass]="isFieldInvalid('value') ? 'invalid' : 'valid'" />
     <div class="absolute inset-y-0 right-0 flex items-center">
       <div
         class="flex h-full items-center justify-center rounded-md py-1 pl-2 pr-2 text-label-2 focus:ring-2 focus:ring-inset focus:ring-indigo-600">
