CE-117 Tooltips in the score result page don't work
* add tooltip component and use it + initFlowbite

(not using initFlowbite blocked the display of the tooltip)


Approved-by: Angelo Meisel

--- a/src/app/features/score-details/score.component.html
+++ b/src/app/features/score-details/score.component.html
@@ -74,7 +74,7 @@
       <ce-biomarker-info
         [Header]="'scores.creationDate' | translate"
         [Value]="score.biomarkers.createdOn"
-        [InfoText]="'tooltips.scores.creationDate'"
+        [InfoText]="'tooltips.scores.creationDate' | translate"
         [isDate]="true"></ce-biomarker-info>
     </div>
     <div
