--- a/src/app/features/patient-details/biomarker/lab-result/lab-result.component.html
+++ b/src/app/features/patient-details/biomarker/lab-result/lab-result.component.html
@@ -3,19 +3,7 @@
     <p class="block font-medium leading-tight">
       {{ biomarker.displayName }}
     </p>
-    <img
-      class="hover:text-primary-600 focus:text-primary-600 active:text-primary-700 pl-1 text-primary transition duration-150 ease-in-out"
-      *ngIf="biomarker.infoText"
-      src="../../../assets/info.svg"
-      [attr.data-tooltip-target]="'biomarker-tooltip-' + biomarker.id"
-      alt="{{ biomarker.infoText }}" />
-    <div
-      [attr.id]="'biomarker-tooltip-' + biomarker.id"
-      role="tooltip"
-      class="tooltip invisible absolute z-10 inline-block max-w-md rounded-lg bg-gray-900 px-3 py-2 font-medium text-white opacity-0 shadow-sm transition-opacity duration-300">
-      {{ biomarker.infoText }}
-      <div class="tooltip-arrow" data-popper-arrow></div>
-    </div>
+    <ce-tooltip [infoText]="biomarker.infoText" [tooltipId]="'biomarker-tooltip-' + biomarker.id"></ce-tooltip>
   </div>
 
   <div *ngIf="biomarker.type === 'float'" class="relative mt-2 rounded-md shadow-sm">
