--- a/src/app/features/patient-details/edit-form/form.component.html
+++ b/src/app/features/patient-details/edit-form/form.component.html
@@ -3,19 +3,12 @@
     class="mb-4 grid grid-cols-3 gap-4 rounded-lg border border-solid border-tone-2 bg-background px-8 py-6 focus:border-2">
     <div>
       <div class="flex flex-row">
-        <label for="patient-name">{{ 'patient.name' | translate }}</label>
-        <img
-          class="hover:text-primary-600 focus:text-primary-600 active:text-primary-700 pl-1 text-primary transition duration-150 ease-in-out"
-          src="../../../assets/info.svg"
-          data-tooltip-target="patient-first-name-tooltip"
-          alt="{{ 'tooltips.patient.name' | translate }}" />
-        <div
-          id="patient-first-name-tooltip"
-          role="tooltip"
-          class="tooltip invisible absolute z-10 inline-block rounded-lg bg-gray-900 px-3 py-2 font-medium text-white opacity-0 shadow-sm transition-opacity duration-300">
-          {{ 'tooltips.patient.name' | translate }}
-          <div class="tooltip-arrow" data-popper-arrow></div>
-        </div>
+        <label for="patient-name" [ngClass]="isFieldInvalid('firstname') ? 'valid' : 'invalid'">{{
+          'patient.name' | translate
+        }}</label>
+        <ce-tooltip
+          [infoText]="'tooltips.patient.name' | translate"
+          [tooltipId]="'patient-first-name-tooltip'"></ce-tooltip>
       </div>
 
       <input
@@ -32,19 +25,12 @@
     </div>
     <div>
       <div class="flex flex-row">
-        <label for="patient-lastname">{{ 'patient.lastName' | translate }}</label>
-        <img
-          class="hover:text-primary-600 focus:text-primary-600 active:text-primary-700 pl-1 text-primary transition duration-150 ease-in-out"
-          src="../../../assets/info.svg"
-          data-tooltip-target="patient-last-name-tooltip"
-          alt="{{ 'tooltips.patient.lastName' | translate }}" />
-        <div
-          id="patient-last-name-tooltip"
-          role="tooltip"
-          class="tooltip invisible absolute z-10 inline-block rounded-lg bg-gray-900 px-3 py-2 font-medium text-white opacity-0 shadow-sm transition-opacity duration-300">
-          {{ 'tooltips.patient.lastName' | translate }}
-          <div class="tooltip-arrow" data-popper-arrow></div>
-        </div>
+        <label for="patient-lastname" [ngClass]="isFieldInvalid('lastname') ? 'valid' : 'invalid'">{{
+          'patient.lastName' | translate
+        }}</label>
+        <ce-tooltip
+          [infoText]="'tooltips.patient.lastName' | translate"
+          [tooltipId]="'patient-last-name-tooltip'"></ce-tooltip>
       </div>
       <input
         type="text"
@@ -60,19 +46,12 @@
     </div>
     <div>
       <div class="flex flex-row">
-        <label for="patient-birthdate">{{ 'patient.birthdate' | translate }}</label>
-        <img
-          class="hover:text-primary-600 focus:text-primary-600 active:text-primary-700 pl-1 text-primary transition duration-150 ease-in-out"
-          src="../../../assets/info.svg"
-          data-tooltip-target="patient-birthdate-tooltip"
-          alt="{{ 'tooltips.patient.birthdate' | translate }}" />
-        <div
-          id="patient-birthdate-tooltip"
-          role="tooltip"
-          class="tooltip invisible absolute z-10 inline-block rounded-lg bg-gray-900 px-3 py-2 font-medium text-white opacity-0 shadow-sm transition-opacity duration-300">
-          {{ 'tooltips.patient.birthdate' | translate }}
-          <div class="tooltip-arrow" data-popper-arrow></div>
-        </div>
+        <label for="patient-birthdate" [ngClass]="isFieldInvalid('birthdate') ? 'valid' : 'invalid'">{{
+          'patient.birthdate' | translate
+        }}</label>
+        <ce-tooltip
+          [infoText]="'tooltips.patient.birthdate' | translate"
+          [tooltipId]="'patient-birthdate-tooltip'"></ce-tooltip>
       </div>
       <input
         type="date"
