--- a/src/app/features/score-details/biomarker-info/biomarker-info.component.html
+++ b/src/app/features/score-details/biomarker-info/biomarker-info.component.html
@@ -1,12 +1,7 @@
 <div class="flex flex-col gap-1 font-normal text-label">
   <div class="flex flex-row gap-1">
     <p>{{ Header }}</p>
-    <img
-      class="hover:text-primary-600 focus:text-primary-600 active:text-primary-700 h-[0.75rem] w-[0.75rem] self-center transition duration-150 ease-in-out"
-      *ngIf="InfoText"
-      src="../../../../assets/info.svg"
-      alt="Tooltip icon"
-      title="{{ InfoText }}" />
+    <ce-tooltip [infoText]="InfoText" [tooltipId]="'tooltip-' + Header.split(' ')[0].toLowerCase()"></ce-tooltip>
   </div>
   <div class="flex flex-row gap-1">
     <p class="font-normal text-text" name="Value" *ngIf="!isDate && !isBoolean">{{ Value }}</p>
