--- a/src/app/features/patient-details/category/list-fixed/list-fixed.component.html
+++ b/src/app/features/patient-details/category/list-fixed/list-fixed.component.html
@@ -14,8 +14,7 @@
           <ce-biomarker-medical-history
             *ngIf="biomarker"
             [biomarker]="biomarker"
-            [formGroup]="findMedicalBiomarkerControlById(biomarker.id)!"
-            [sideEffectMarker]="findSideEffectMarker(biomarker)" />
+            [formGroup]="findMedicalBiomarkerControlById(biomarker.id)!" />
         </span>
       </ng-container>
     </div>
