Bugfix/CE-85 Error Handling
* stop enter to set editmode on biomarker (preferences)

* add update user preferences to store and handle errors

* re-organize error translations

* add missing error messages

* add create and update user profile messages

* sort message functions inside message service

* hide scroll bar on login if window is big enough

* fix save button / submit


Approved-by: Angelo Meisel

--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="h-screen w-screen bg-login bg-cover bg-center p-10">
-  <div class="flex h-full w-full max-w-sm flex-col overflow-y-scroll rounded-xl bg-white p-4 sm:w-96">
+  <div class="flex h-full w-full max-w-sm flex-col overflow-y-auto rounded-xl bg-white p-4 sm:w-96">
     <img src="../../../assets/cardio-explorer-logo.svg" alt="Cardio Explorer logo" class="h-auto w-auto self-start" />
     <div
       class="flex grow flex-col gap-2 p-4"
