--- a/src/app/features/patient-details/category/list-flexible-edit/list-flexible-edit.component.html
+++ b/src/app/features/patient-details/category/list-flexible-edit/list-flexible-edit.component.html
@@ -22,7 +22,7 @@
 
     <div class="col-start-1 col-end-6 flex flex-row-reverse">
       <button (click)="savePreferences()" class="edit self-end">
-        {{ 'category.save' | translate }}
+        {{ 'category.unitPreferences.save' | translate }}
       </button>
     </div>
   </div>
