--- a/src/app/features/patient-details/category/list-flexible/list-flexible.component.html
+++ b/src/app/features/patient-details/category/list-flexible/list-flexible.component.html
@@ -11,7 +11,7 @@
     <!-- Save and edit button -->
     <div class="col-start-1 col-end-6 flex flex-row-reverse">
       <button (click)="enableEditMode()" class="edit self-end">
-        {{ 'category.edit' | translate }}
+        {{ 'category.unitPreferences.edit' | translate }}
       </button>
     </div>
   </div>
