--- a/src/app/features/patient-records/patient-records.component.html
+++ b/src/app/features/patient-records/patient-records.component.html
@@ -34,14 +34,9 @@
             #patientLastName
             class="basis-1/2 rounded-md border border-tone-2 focus:outline-none focus:ring-1 focus:ring-inset focus:ring-primary" />
         </div>
-        <div class="flex flex-col p-1">
-          <label for="patient-birthdate" class="text-label">{{ 'patient.birthdate' | translate }}</label>
-          <input
-            type="date"
-            id="patient-birthdate"
-            #patientBirthdate
-            class="rounded-md border border-tone-2 focus:outline-none focus:ring-1 focus:ring-inset focus:ring-primary"
-            max="2999-12-31" />
+        <div class="col-span-1 flex flex-col p-1">
+          <label for="patient-birthdate">{{ 'patient.birthdate' | translate }}</label>
+          <input type="date" id="patient-birthdate" max="2999-12-31" #patientBirthdate />
         </div>
         <div class="flex flex-row-reverse">
           <div class="flex w-28 flex-col p-1">
