--- a/src/app/features/patient-records/patient-records.component.scss
+++ b/src/app/features/patient-records/patient-records.component.scss
@@ -1,3 +1,6 @@
 input[type='number']::-webkit-inner-spin-button {
   appearance: none;
 }
+input {
+  @apply mb-6 w-full rounded-md border border-tone-2 py-1.5 pl-2 shadow-sm focus:outline-none focus:ring-1 focus:ring-inset focus:ring-primary disabled:bg-gray-200;
+}
