CE-161 save as draft
* implement save score as draft

* fix display of validated inputs after click calculate button

* style draft button

* add empty validation text to translations

* add empty validation text to lab result

* validate patient data on save draft


Approved-by: Angelo Meisel

--- a/src/app/features/patient-details/biomarker/lab-result/lab-result.component.html
+++ b/src/app/features/patient-details/biomarker/lab-result/lab-result.component.html
@@ -10,6 +10,7 @@
     <div *ngIf="biomarker.type === 'float'" class="relative mt-2 rounded-md shadow-sm">
       <input
         type="number"
+        [id]="biomarker.id + '_input'"
         [min]="currentUnit?.minimum!"
         [max]="currentUnit?.maximum!"
         class="block w-full rounded-md border p-2 placeholder:text-label-2"
@@ -42,7 +43,11 @@
         </ng-template>
       </div>
     </div>
-    <p class="error-message mt-2 text-sm text-red-600 dark:text-red-500">
+
+    <p *ngIf="hasError('value', 'required')" class="mt-2 text-sm text-red-600 dark:text-red-500">
+      <span class="font-medium"> {{ 'biomarker.validationEmpty' | translate }}</span>
+    </p>
+    <p *ngIf="isFieldInvalid('value')" class="error-message mt-2 text-sm text-red-600 dark:text-red-500">
       <span class="font-medium">
         {{ 'biomarker.validationRangeMessage' | translate: { min: currentUnit?.minimum, max: currentUnit?.maximum } }}
       </span>
