--- a/src/app/features/patient-details/biomarker/medical-history/medical-history.component.html
+++ b/src/app/features/patient-details/biomarker/medical-history/medical-history.component.html
@@ -17,12 +17,12 @@
             [value]="option.value?.toString()?.toLowerCase()"
             formControlName="value" />
         </ng-container>
+
         <label
           [for]="biomarker.id + '_' + option.displayName"
           class="block cursor-pointer select-none rounded-md border border-tone-2 bg-tone-1 p-2 text-text peer-checked:border-primary peer-checked:bg-primary peer-checked:text-white"
           >{{ option.displayName }}</label
         ><!-- TODO: Properly handle translation -->
-        <!-- Disable effected Marker marker -->
         <ng-template #disabled>
           <input
             type="radio"
@@ -38,6 +38,7 @@
   <div *ngIf="biomarker.type === 'integer'" class="relative mt-2 rounded-md shadow-sm">
     <input
       type="number"
+      [id]="biomarker.id + '_input'"
       [min]="biomarker.unit.minimum!"
       [max]="biomarker.unit.maximum!"
       formControlName="value"
@@ -51,6 +52,9 @@
       </div>
     </div>
   </div>
+  <p *ngIf="hasError('value', 'required')" class="mt-2 text-sm text-red-600 dark:text-red-500">
+    <span class="font-medium"> {{ 'biomarker.validationEmpty' | translate }}</span>
+  </p>
   <p *ngIf="isFieldInvalid('value')" class="mt-2 text-sm text-red-600 dark:text-red-500">
     <span class="font-medium">
       {{ 'biomarker.validationRangeMessage' | translate: { min: biomarker.unit.minimum, max: biomarker.unit.maximum } }}
