CE-106 Selection of different unit system is not implemented/working
* delete unitTypeinput on profile

* add drop-down to edit component, fix update

* set preferredUnit value initially for display

* hide "other" in dropdown + translate values

Approved-by: Angelo Meisel

--- a/src/app/features/patient-details/biomarker/lab-result/lab-result.component.html
+++ b/src/app/features/patient-details/biomarker/lab-result/lab-result.component.html
@@ -30,7 +30,7 @@
             name="unitSelector"
             class="mr-1 border-0 px-2 py-1 focus:ring-0"
             formControlName="unitType"
-            (change)="setCurrentUnit()">
+            (change)="setCurrentUnitAndResetValue()">
             <option class="pr-2" *ngFor="let unit of biomarker.units" [value]="unit.unitType">
               {{ unit.shorthand }}
             </option>
