--- a/src/app/features/patient-details/category/list-flexible/list-flexible.component.html
+++ b/src/app/features/patient-details/category/list-flexible/list-flexible.component.html
@@ -1,5 +1,11 @@
 <!-- Flexible biomarkers -->
 <ng-container [formGroup]="formGroup">
+  <input
+    name="biomarkerUnitSelectBox"
+    id="biomarkerUnitSelectBox"
+    disabled
+    [value]="'labUnit.options.' + formGroup.getRawValue().preferredUnitType | translate"
+    class="mb-6 block w-max rounded-md border p-2 placeholder:text-label-2 disabled:border-gray-300 disabled:bg-gray-100" />
   <div class="align-items-end grid gap-4 md:grid-cols-4 lg:grid-cols-5" formArrayName="biomarkerValues">
     <span *ngFor="let biomarker of biomarkers">
       <!-- biomarker form -->
