--- a/src/app/features/score-details/score.component.html
+++ b/src/app/features/score-details/score.component.html
@@ -2,7 +2,7 @@
   <div name="header-div" class="flex flex-row justify-between">
     <h1>Score #{{ score.requestId }}</h1>
     <div>
-      <button type="button" class="action" [routerLink]="PageLinks.NEW_SCORE">{{ 'scores.print' | translate }}</button>
+      <button type="button" class="action">{{ 'scores.print' | translate }}</button>
     </div>
   </div>
   <div
